Fix overflow in plan component

--- a/src/components/CardPlan/CardPlan.module.css
+++ b/src/components/CardPlan/CardPlan.module.css
@@ -2,7 +2,7 @@
     border: 1px solid #CECECE;
     position: relative;
     padding-bottom: 60px;
-    min-height: 660px;
+    min-height: 710px;
     transform: scale(.97);
 }
 
