--- a/src/components/PlanSection/PlanSection.module.css
+++ b/src/components/PlanSection/PlanSection.module.css
@@ -1,5 +1,6 @@
 .Section {
   padding-top: 4rem;
+  padding-bottom: 6.5rem;
 }
 
 .CardFeatures__title {
